--- a/index.html
+++ b/index.html
@@ -226,55 +226,55 @@
         <hr>
     </div>
 
-    <!-- FAQ Section -->
-    <div class="container faq-section mt-5">
-        <h2 class="text-center">Frequently Asked Questions</h2>
-        <div class="accordion fade-inp []" id="accordionExample">
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            What is the difference between Website Profesional and Website Corporate/Database?
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.
-                    </div>
-                </div>
+<!-- FAQ Section -->
+<div class="container faq-section mt-5">
+    <h2 class="text-center">Frequently Asked Questions</h2>
+    <div class="accordion fade-inp []" id="accordionExample">
+        <div class="card">
+            <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        What is the difference between Website Profesional and Website Corporate/Database?
+                    </button>
+                </h5>
             </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            How long does it take to set up my website?
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Can I customize my website's design and layout?
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.
-                    </div>
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                    Perbedaan antara Website Profesional dan Website Corporate/Database adalah bahwa Website Profesional lebih fokus pada presentasi dan informasi umum, sedangkan Website Corporate/Database lebih fokus pada pengelolaan data dan sistem yang lebih kompleks.
                 </div>
             </div>
         </div>
-        <hr>
+        <div class="card">
+            <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        How long does it take to set up my website?
+                    </button>
+                </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                    Waktu yang dibutuhkan untuk mengatur website Anda tergantung pada kompleksitas desain dan fitur yang Anda inginkan. Namun, kami dapat menyelesaikan pengaturan website Anda dalam waktu 3-5 hari kerja.
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Can I customize my website's design and layout?
+                    </button>
+                </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                    Ya, Anda dapat mengustomisasi desain dan tata letak website Anda sesuai dengan kebutuhan dan preferensi Anda. Kami menyediakan berbagai template dan opsi desain yang dapat disesuaikan dengan kebutuhan Anda.
+                </div>
+            </div>
+        </div>
     </div>
+    <hr>
+</div>
 
     <!-- Company Motto/Tagline Section -->
     <div class="motto-section mt-5 text-center">
